2003-05-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* contact/index.php:
	--> ask xmms questions on the XMMS mailing list

2003-05-05  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* css/default.css:
	added linebreaks and changed background color for pre.cvs pre.doc
	tags.

	* documentation/faq/index.php:
	new generated from current cvs version

	* documentation/faq/faq2php:
	changed to new template name - added comment

	* screenshots/windowdecors/index.php:
	changed link name to "Window Decoration Screenshots"

	* navgen.cli:
	fixed output statements

	* documentation/faq/faq_template.php_:
	renamed template.php to this name to hide it from navgen
	fixed loading of definitions.inc while navgen processing

2003-05-02  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/*/index.php:
	fixed problem with navgen run. files should be excluded from navgen.

	* customize_theme/index.php:
	* customize_theme/theme_descriptions_helper.inc
	files to provide a layout change by the user.

	* logo-competition/logos/Phil_Harper/index.php:
	excluded file from navgen processing

	* navgen.cli:
	changed resorting function so that it can handle $this->nav_array.
	navgen creates an array which is usable by the class concept only.
	fixed consistence check
	added escape sequences for colored output

	* definitions.inc:
	make the old layout files not available. new class files will be
	used only.

	* web-theme/themes/default_theme.inc:
	try to reserve some space for the pager to avoid resizing of the
	window.

	* web-theme/classes/default_class.inc:
	removed some methods which are defined in the base class.

	* web-theme/classes/base_class.inc:
	new method init_style_array to set the default theme properties.
	conv_link_target adds GET variables which are defined in
	style_array to the url.

2003-05-02  Mikhael Goikhman  <migo@homemail.com>

	* logo-competition/logos/Phil_Harper/*:
	more logos

2003-05-01  Bob Woodside  <dumbledore@woodsway.com>

	* layout_default.inc: